--- a/dev/index.haml
+++ b/dev/index.haml
@@ -1,7 +1,14 @@
 !!!
-%html
+%html{ "ng-app" => "TomsApp" }
 	%head
 		%title Test Task for Daniel
 		%link{ href: 'css/style.css', rel: 'stylesheet' }
 	%body
-		%h1 Test
+		%div{ "ng-view" => "" }
+
+		%script{ src: "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" }
+		%script{ src: "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js" }
+		%script{ src: "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.min.js" }
+		%script{ src: "js/app.min.js" }
+
+		%script{ src: "http://localhost:35729/livereload.js" }
