Add the third page

--- a/dev/index.haml
+++ b/dev/index.haml
@@ -4,7 +4,7 @@
 		%title Test Task for Daniel
 		%link{ href: 'css/style.css', rel: 'stylesheet' }
 	%body
-		%div{ "ng-view" => "" }
+		.main{ "ng-view" => "" }
 
 		%script{ src: "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" }
 		%script{ src: "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js" }
