--- a/dev/index.haml
+++ b/dev/index.haml
@@ -58,7 +58,8 @@
 		%script{ src: "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" }
 		%script{ src: "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js" }
 		%script{ src: "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.min.js" }
+		%script{ src: "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-touch.min.js" }
 		%script{ src: "js/vendor/bootstrap.min.js" }
 		%script{ src: "js/app.min.js" }
 
-		%script{ src: "http://localhost:35729/livereload.js" }
+		-# %script{ src: "http://localhost:35729/livereload.js" }
